test/compile_errors/tokenization_error.ivy
#lang ivy1.7
relation λ(N:nat)